--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
 <body>
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="games.html">Games</a>
+        <a href="https://github.com/Ianyourgod" style="float:right;"><img src="images/github.png"></a>
+        <a href="https://discord.gg/TWCEgCHcmZ" style="float:right;"><img src="images/discord.png"></a>
     </div>
+
+    <div class="contents">
+        <h1 class="title">WELCOME</h1>
+        <br>
+        <div class="me">
+            <img onclick="alert('there\'ll be cat images here later')" src="images/blehhh.jpg" id="pfp">
+            <h2 class="name">Ianyourgod</h2>
+            <h3 class="desc">I am a developer who likes to code and wallow in despair.</h3>
+        </div>
+    </div>
+
 </body>
 </html>
